@@ -3,10 +3,10 @@ using System.Runtime.InteropServices;
 
 public class Test 
 {
-	[DllImport ("libtest.so", EntryPoint="mono_test_byvalstr_gen")]
+	[DllImport ("libtest", EntryPoint="mono_test_byvalstr_gen")]
 	public static extern IntPtr mono_test_byvalstr_gen();
 
-	[DllImport ("libtest.so", EntryPoint="mono_test_byvalstr_check")]
+	[DllImport ("libtest", EntryPoint="mono_test_byvalstr_check")]
 	public static extern int mono_test_byvalstr_check(IntPtr data, string correctString);
 	
 	[StructLayout (LayoutKind.Sequential)]
