@@ -24,16 +24,16 @@ public struct cs
 
 public class Test
 {
-	[DllImport ("libtest.so")]
+	[DllImport ("libtest")]
 	public static extern int mono_union_test_1 (cs a);
 
-	[DllImport ("libtest.so")]
+	[DllImport ("libtest")]
 	public static extern int mono_return_int (int a);
 
-	[DllImport ("libtest.so", EntryPoint="mono_return_int_ss")]
+	[DllImport ("libtest", EntryPoint="mono_return_int_ss")]
 	public static extern int mono_return_int_ss (ss a);
 
-	[DllImport ("libtest.so", EntryPoint="mono_return_int_su")]
+	[DllImport ("libtest", EntryPoint="mono_return_int_su")]
 	public static extern int mono_return_int_su (su a);
 
         static int Main()
