@@ -5,7 +5,7 @@ using System.Runtime.InteropServices;
 public class Test {
 
 
-	[DllImport ("libtest.so", EntryPoint="mono_test_marshal_stringbuilder")]
+	[DllImport ("libtest", EntryPoint="mono_test_marshal_stringbuilder")]
 	public static extern void mono_test_marshal_stringbuilder (StringBuilder sb, int len);
 
 	public static int Main () {
