@@ -1,3 +1,8 @@
+2003-09-24  Bernie Solomon  <bernard@ugsolutions.com>
+
+        * mono/tests/pinvoke*.cs, delegate4.cs, marshal10.cs, marshal4.cs
+          marshal5.cs: remove .so from DllImport of libtest to aid portability.
+
 2003-09-08  Zoltan Varga  <vargaz@freemail.hu>
 
 	* configure.in: Added check for valgrind headers.
